--- a/Store/Store/Views/Shared/_Layout.cshtml
+++ b/Store/Store/Views/Shared/_Layout.cshtml
@@ -17,11 +17,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Online Store", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Add Product", "Create", "Products")</li>
+                    <li>@Html.ActionLink("All Products", "All", "Products")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
