--- a/Store/Store/Views/Shared/_LoginPartial.cshtml
+++ b/Store/Store/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,11 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
+            <a href="/Products/All?user=@User.Identity.GetUserName()">My Products</a>
+        </li>
+        <li>
             @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
