--- a/Store/Store/Views/Products/Details.cshtml
+++ b/Store/Store/Views/Products/Details.cshtml
@@ -1,25 +1,40 @@
 ﻿@model Store.Models.Products.ProductDetails
 
+<div class="row mt-60 text-center">
+    <div class="col-md-6">
+        <img src="@Model.ImageUrl" class="img-responsive" />
+    </div>
+    <div class="col-md-4" style="text-size-adjust:50%">
+        <ul>
+            <li><h2>@Model.Name</h2></li>
+            <li><h2>@Model.Categorie</h2></li>
+            <li><h2>@Model.Price BGN</h2></li>
+        </ul>
+    </div>
+</div>
 <div class="row mt-60">
-    <div class="col-md-4">
-      <img src="@Model.ImageUrl"class="img-responsive"/>
-    </div>
-    <div class="col-md-4">
-
-        <h2>@Model.Name</h2>
-        <h2>@Model.Categorie</h2>
-        <h3>@Model.Price BGN</h3>
-    </div>
-    <div class="col-md-4">
-        <h3>@Model.Description</h3>
+    <h3>@Model.Description</h3>
 
 
+    <div class="form-group-lg text-center">
         @using (Html.BeginForm("Buy", "Products", FormMethod.Get))
         {
-            @Html.HiddenFor(p=>p.Id)
-            <span>
-                <input type="submit"value="Buy" class="btn btn-success" />
-            </span>
+            @Html.HiddenFor(p => p.Id)
+            <input type="submit" value="Buy" class="btn btn-success" style="width:200%" />
         }
+        @using (Html.BeginForm("Edit", "Products", FormMethod.Get))
+        {
+        @Html.HiddenFor(p => p.Id)
+        <input type="submit" value="Edit" class="btn btn-danger" style="width:200%" />
+        }
+        <input type="submit" value="Back" class="btn btn-default" onclick="goBack()" style="width:200% " />
+
+        <script type="text/javascript">
+            function goBack() {
+                window.history.back()
+            }
+        </script>
+
+
     </div>
 </div>
